--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://static-zmp3.zmdcdn.me/skins/zmp3-v5.2/images/icon_zing_mp3_60.png"
+      href="https://icons.iconarchive.com/icons/papirus-team/papirus-apps/128/multimedia-audio-player-icon.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ZingClone</title>
+    <title>MusicPlayer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
